@@ -1,3 +1,10 @@
+2005-09-12 22:15 Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* GNUmakefile: Copy the .gorm file into the Resources.
+	* GormCore/GormInspectorsManager.h: Use the inspector panel gorm.
+	* GormCore/GormInspectorsManager.m: Use the inspector panel gorm.
+	* English/GormInspectorPanel.gorm: corrects bug#14757.
+	
 2005-09-04 10:17 Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* Palettes/4Data/GormNSComboBoxAttributesInspector.m: In ok:
